<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Speed Quizz</string>
    <string name="menu_action_question">Question</string>
    <string name="menu_action_settings">Settings</string>
    <string name="main_add_button">Add a player</string>
    <string name="main_text_player">player</string>
    <string name="main_btn_start">Start the game</string>
    <string name="game_btn_restart">Restart</string>
    <string name="game_btn_menu">Menu</string>
    <string name="name">Name</string>
    <string name="Score">0</string>
    <string name="Question">Question</string>
    <string name="annuler">Cancel</string>
    <string name="nbr_de_question">Number of question</string>
    <string name="time_bettwen_each_question">Time between each question</string>
    <string name="enregistrer">Save</string>
</resources>